samples/_failures_safe/1761179764_ddaaff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81abdc5e.c: In function ‘main’:
./samples/SAFE/__tmp_81abdc5e.c:180:5: error: ‘destroy’ undeclared (first use in this function)
  180 |     destroy
      |     ^~~~~~~
./samples/SAFE/__tmp_81abdc5e.c:180:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_81abdc5e.c:180:12: error: expected ‘;’ at end of input
  180 |     destroy
      |            ^
      |            ;
./samples/SAFE/__tmp_81abdc5e.c:180:5: error: expected declaration or statement at end of input
  180 |     destroy
      |     ^~~~~~~
